test/soya/error/type/abs_ext.psy
abstract class apoint {
  attribute int x;
  attribute int y;

  abstract method int sum(int x);
}

class point extends apoint {
  method void constructor(int x, int y) {
    this.x = x;
    this.y = y;
  }
}

function void main() {
  apoint p = new apoint(1, 1);
  int c = p.sum(48);
  putchar(c);
}

